# EPI

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CITATION.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE.md  README.md  TODO.md  epi.core.dense_grid.html  epi.core.html  epi.core.inference.html  epi.core.kde.html  epi.core.model.html  epi.core.result_manager.html  epi.core.sampling.html  epi.core.sparsegrid.html  epi.core.transformations.html  epi.html  epi.jax_extension.html  epi.plotting.html  epic.core.html  epic.example_models.cpp_model.html  epic.example_models.html  epic.example_models.sbml_model.html  epic.html  epic.models.example_models.html  epic.models.html  eulerpi.core.data_transformation.html  eulerpi.core.data_transformation_types.html  eulerpi.core.data_transformations.html  eulerpi.core.dense_grid.html  eulerpi.core.dense_grid_types.html  eulerpi.core.html  eulerpi.core.inference.html  eulerpi.core.inference_types.html  eulerpi.core.kde.html  eulerpi.core.model.html  (+57 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml  sphinx.yml
MarkdownLinks/: changelog.html  citation.html  contributing.html  development.html  license.html  readme.html  todos.html
_modules/: index.html
_modules/eulerpi/: jax_extension.html
_modules/tests/: conftest.html  profiling.html  test_data_transformation.html  test_dense_grid.html  test_examples.html  test_fixed_params.html  test_heat.html  test_inference.html  test_jax.html  test_kde.html  test_logging.html  test_model_check.html  test_pickling.html  test_plotting.html  test_simple_models.html  test_slices.html  test_transformations.html
_sources/: epi.core.kde.rst.txt  epi.core.model.rst.txt  epi.core.result_manager.rst.txt  epi.core.sparsegrid.rst.txt  epi.core.transformations.rst.txt  epi.jax_extension.rst.txt  epi.rst.txt  epic.core.rst.txt  epic.example_models.sbml_model.rst.txt  epic.rst.txt  eulerpi.core.data_transformation.rst.txt  eulerpi.core.data_transformations.rst.txt  eulerpi.core.inference_types.rst.txt  eulerpi.core.kde.rst.txt  eulerpi.core.models.base_model.rst.txt  eulerpi.core.models.rst.txt  eulerpi.core.models.sbml_model.rst.txt  eulerpi.core.plotting.rst.txt  eulerpi.core.result_manager.rst.txt  eulerpi.core.rst.txt  eulerpi.core.sparsegrid.rst.txt  eulerpi.core.transformations.rst.txt  eulerpi.examples.corona.rst.txt  eulerpi.examples.cpp.cpp_model.rst.txt  eulerpi.jax_extension.rst.txt  examples.rst.txt  index.rst.txt  modules.rst.txt  tests.rst.txt  tests.test_dense_grid.rst.txt  tests.test_examples.rst.txt  tests.test_fixed_params.rst.txt  tests.test_logging.rst.txt  tests.test_model_check.rst.txt  tests.test_pickling.rst.txt  tests.test_plotting.rst.txt  tests.test_transformations.rst.txt  welcome.rst.txt
_sources/MarkdownLinks/: citation.rst.txt  contributing.rst.txt  development.rst.txt  license.rst.txt  todos.rst.txt
_sources/examples/: sbml_example.rst.txt  temperature_example.rst.txt
_sources/tutorial_material/: tutorial.rst.txt
_static/: custom.css
docs/: requirements.txt
docs/source/: conf.py  epi.core.dense_grid.rst  epi.core.inference.rst  epi.core.kde.rst  epi.core.model.rst  epi.core.result_manager.rst  epi.core.rst  epi.core.sampling.rst  epi.core.sparsegrid.rst  epi.core.transformations.rst  epi.example_models.applications.rst  epi.example_models.cpp.rst  epi.example_models.rst  epi.example_models.sbml.rst  epi.jax_extension.rst  epi.plotting.marginals.rst  epi.plotting.plots.rst  epi.plotting.plotter.rst  epi.plotting.rst  epi.rst  epic.core.rst  epic.example_models.applications.rst  epic.example_models.cpp.rst  epic.example_models.cpp_model.rst  epic.example_models.rst  epic.example_models.sbml.rst  epic.models.example_models.rst  epic.models.rst  epic.rst  eulerpi.core.data_transformation_types.rst  eulerpi.core.data_transformations.rst  eulerpi.core.dense_grid.rst  eulerpi.core.dense_grid_types.rst  eulerpi.core.inference.rst  eulerpi.core.inference_types.rst  eulerpi.core.kde.rst  eulerpi.core.model.rst  eulerpi.core.model_check.rst  eulerpi.core.models.artificial_model_interface.rst  eulerpi.core.models.base_model.rst  (+39 more)
epi/: __init__.py  jax_extension.py
epi/core/: __init__.py  dense_grid.py  functions.py  inference.py  kde.py  kernel_density_estimation.py  model.py  result_manager.py  sampling.py  sparsegrid.py  transformations.py
epi/example_models/: simple_models.py
epi/examples/: simple_models.py
epi/plotting/: __init__.py  marginals.py  plots.py  plotter.py
epic/: Exe.py  __init__.py  functions.py  kernel_density_estimation.py  marginals.py  models.py  plots.py  sampling.py  tests.py
epic/core/: functions.py  kernel_density_estimation.py  marginals.py  model.py  plots.py  plotting.py  sampling.py
epic/example_models/: autodiff.py  corona.py  extern_model.py  simple.py  simple_models.py  stock.py  temperature.py
epic/example_models/cpp_model/: CMakeLists.txt  cpp_model.hpp  cpp_model.py  plant.py  wrapper.cpp
epic/models/: model.py
epic/plotting/: __init__.py  (+2 more)
eulerpi/: Untitled-1.ipynb  __init__.py  epi.py  function_wrappers.py  inference.py  inference_types.py  load.py  logger.py  model_check.py  parameter_inference.py  plotting.py  result_manager.py
eulerpi/examples/cpp/: CMakeLists.txt  cpp_plant.py  python_reference_plants.py
examples/: corona_example.html  cpp_example.html  sbml_example.html  stock_example.html  temperature_example.html
tests/: conftest.py  helper.py  profiling.py  test_applications.py  test_autodiff_model.py  test_correctness.py  test_cpp.py  test_cpp_model.py  test_data_transformation.py  test_dense_grid.py  test_examples.py  test_extern_model.py  test_fixed_params.py  test_grid.py  test_heat.py  test_inference.py  test_jax.py  test_jax_gpu.py  test_kde.py  test_linear_ode.py  test_logging.py  test_model_check.py  test_model_test.py  test_pickling.py  test_plotting.py  test_pysces.py  test_sbml_model.py  test_simple_models.py  test_slices.py  test_transformations.py
tutorial_material/: tutorial.html
(+235 files in other folders)
