[tool.poetry]
name = "eulerpi"
version = "0.8.0"
description = "The eulerian parameter inference (eulerpi) returns a parameter distribution, which is consistent with the observed data by solving the inverse problem directly. In the case of a one-to-one mapping, this is the true underlying distribution."
authors = ["Lars Kaiser <lars.g.kaiser@gmx.de>", "Sebastian Hoepfl <sebastian.hoepfl@ist.uni-stuttgart.de>", "Vincent Wagner <vincent.wagner@ist.uni-stuttgart.de>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = []
exclude = ["**/__pycache__/*", "**/build/*", "**/*.so"]

[tool.poetry.urls]
"Homepage" = "https://github.com/Systems-Theory-in-Systems-Biology/EPI"
"Bug Tracker" = "https://github.com/Systems-Theory-in-Systems-Biology/EPI/issues"
"Documentation" = "https://Systems-Theory-in-Systems-Biology.github.io/EPI/"
"Changelog" = "https://Systems-Theory-in-Systems-Biology.github.io/EPI/MarkdownLinks/changelog.html"

[tool.poetry.dependencies]
python = "<3.13, >=3.9"
jax = "^0.4.19"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
diffrax = "^0.4.1"
emcee = "^3.1.4"
jaxlib = "^0.4.19"
tqdm = "^4.66.1"
seedir = "^0.4.2"
amici = { version = "^0.16.1", optional = true }
scikit-learn = "^1.3.1"

[tool.poetry.extras]
sbml = ["amici"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.2"
pyproject-flake8 = "^6.1.0"
coverage = "^7.3.2"
ipykernel = "^6.25.2"
sphinx = "^7"
sphinx-copybutton = "^0.5.2"
sphinx-togglebutton = "^0.3.2"
sphinx-rtd-theme = "^1.3.0"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
skip_gitignore = "true"
float_to_top = "true"
line_length = 79
known_first_party = "amici"

[tool.flake8]
extend-ignore = ["E501", "E203", "F841"] # Length of lines already handled by black, spacing, unused variables
per-file-ignores = ["__init__.py: F401"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
norecursedirs = [
    "generated_sbml_models",
    "Data",
    "Applications",
    "build",
]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["eulerpi"]
filterwarnings = [
    'ignore:FigureCanvasTemplate is non-interactive, and thus cannot be shown',
]
