[project]
name = "eulerpi"
version = "0.10.0"
description = "The eulerian parameter inference (eulerpi) returns a parameter distribution, which is consistent with the observed data by solving the inverse problem directly. In the case of a one-to-one mapping, this is the true underlying distribution."
authors = [
    { name = "Lars Kaiser", email = "lars.g.kaiser@gmx.de" },
    { name = "Sebastian Hoepfl", email = "sebastian.hoepfl@ist.uni-stuttgart.de" },
    { name = "Vincent Wagner", email = "vincent.wagner@ist.uni-stuttgart.de" },
]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.4.19",
    "numpy>=1.26.1",
    "matplotlib>=3.8.0",
    "diffrax>=0.4.1",
    "emcee>=3.1.4",
    "jaxlib>=0.4.19",
    "tqdm>=4.66.1",
    "seedir>=0.4.2",
    "scikit-learn>=1.3.1",
]

[project.optional-dependencies]
sbml = ["amici>=0.26.1"]

[project.urls]
Homepage = "https://github.com/Systems-Theory-in-Systems-Biology/EPI"
"Bug Tracker" = "https://github.com/Systems-Theory-in-Systems-Biology/EPI/issues"
Documentation = "https://Systems-Theory-in-Systems-Biology.github.io/EPI/"
Changelog = "https://Systems-Theory-in-Systems-Biology.github.io/EPI/MarkdownLinks/changelog.html"

[dependency-groups]
dev = [
    "pre-commit>=3.7.1,<4",
    "pytest>=8.2.0,<9",
    "pyproject-flake8>=7.0.0,<8",
    "coverage>=7.5.0,<8",
    "sphinx>=7.3.7,<8",
    "sphinx-copybutton>=0.5.2,<0.6",
    "sphinx-togglebutton>=0.3.2,<0.4",
    "sphinx-rtd-theme>=2.0.0,<3",
    "myst-parser>=3.0.1,<4",
    "jupyter>=1.0.0,<2",
    "nbmake>=1.5.3,<2",
    "pyqt6>=6.7.0,<7",
    "ruff>=0.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 79
src = [".", "eulerpi"]

[tool.ruff.format]

[tool.ruff.lint]
extend-ignore = ["E501", "E203", "F841"] # Length of lines already handled by black, spacing, unused variables

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["amici"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "docs/source/tutorial_material",
]
norecursedirs = [
    "generated_sbml_models",
    "Data",
    "Applications",
    "build",
]
addopts = [
    "--import-mode=importlib",
    "--nbmake",
]
pythonpath = ["eulerpi"]
filterwarnings = [
    'ignore:FigureCanvasTemplate is non-interactive, and thus cannot be shown',
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
